--- a/dtui/dtui.csproj
+++ b/dtui/dtui.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="ReactiveUI" Version="17.1.50" />
     <PackageReference Include="ReactiveUI.Fody" Version="17.1.50" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
     <PackageReference Include="terminal.gui" Version="1.4.0" />
   </ItemGroup>
 
