--- a/dtui/Properties/launchSettings.json
+++ b/dtui/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "dtui": {
       "commandName": "Project",
-      "commandLineArgs": "run"
+      "commandLineArgs": "run --language en_US"
     }
   }
 }
